# bigbrother

./: .gitignore  BigBrother.spec  CHANGELOG.md  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  REFACTORING_NOTES.md  REFACTORING_PLAN.md  RELEASE_GUIDE.md  VIEWER_QUICKSTART.md  build.bat  build_exe.bat  build_exe.sh  build_installer.bat  build_viewer.bat  docs  focus_log_viewer.cpp  imgui.ini  pyproject.toml  requirements.txt  session_logger.h  setup_imgui.bat  window_focus_monitor.cpp
scripts/: RELEASE_NOTES_TEMPLATE.md  RELEASE_README.txt  build_cmake.bat  build_viewer_legacy.bat  install.ps1  installer.iss  package.bat  setup_project.bat  uninstall.ps1
src/common/: CMakeLists.txt  session_data.h  session_logger.h  time_utils.h
src/monitor/: CMakeLists.txt  main.cpp
src/python/: main.py
src/viewer/: CMakeLists.txt  main.cpp
src/viewer/data/: filter_manager.cpp  filter_manager.h  session_loader.cpp  session_loader.h
src/viewer/graphics/: icon_manager.cpp  icon_manager.h
src/viewer/ui/: main_window.cpp  main_window.h  settings_window.cpp  settings_window.h  timeline_view.cpp  timeline_view.h
